# MinVR-VTK

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
config/: Elaine.minvr  HTC_Vive.xml  desktop-freeglut.xml  desktop-headtracked-freeglut.minvr
data/: cco-ascii.vtk  fekcorr-ascii.vtk  newar-ascii.vtk  newhetg-ascii.vtk  newjets-ascii.vtk  newopt-ascii.vtk  yurt_2.mtl
examples/: CMakeLists.txt  ExternalRenderWindowDemo.cxx  MinIntensityRendering.cxx  MinVRIntensityRendering.cxx  RenderInExistingContext.cxx  SmartVolumeMapper.cxx  demo.cxx  demo2-cube.cxx  demo2.cxx  demo3.cxx  objimporter.cxx  objimporter2.cxx  supernova.cxx  supernova2.cxx  supernova3-win.cxx  supernova3.cxx  vtkglut.cxx
examples/GenericDataObjectReader/: CMakeLists.txt
examples/HAVSVolumeMapper/: CMakeLists.txt
examples/MinIntensityRendering/: CMakeLists.txt
examples/SmartVolumeMapper/: CMakeLists.txt
src/: ActorWrapper.cxx  ActorWrapper.h  CMakeLists.txt  MVRDemo.h  vtkCustomExternalOpenGLCamera.cxx  vtkCustomExternalOpenGLCamera.h  vtkCustomPropPicker.cxx  vtkCustomPropPicker.h
